--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   shared_preferences:
   smooth_page_indicator:
   page_indicator:
+  flutter_bloc: ^7.3.0
+  google_sign_in: ^5.1.1
+
 
   dio:
   flutter_polyline_points:
