--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.final_project">
    <application
-        android:label="final_project"
+       android:requestLegacyExternalStorage="true"
+       android:label="final_project"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
