--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,6 +34,7 @@ dependencies:
   page_indicator:
   flutter_bloc: ^7.3.0
   google_sign_in: ^5.1.1
+  fluttertoast: ^8.0.9
 
 
   dio:
@@ -46,6 +47,19 @@ dependencies:
   google_maps_flutter: ^2.1.1
   image_picker: ^0.8.4+4
   video_player: ^2.2.10
+
+  flutter_local_notifications: 5.0.0
+
+  firebase_messaging: ^10.0.5
+
+
+dependency_overrides:
+
+  firebase_messaging_platform_interface: 3.1.6
+
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/images/about1.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -85,7 +100,7 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
+  # yesilkalacal:
   # fonts:
   #   - family: Schyler
   #     fonts:
