--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yesilkalacal.final_project">
+    package="com.example.final_project">
    <application
        android:requestLegacyExternalStorage="true"
        android:label="final_project"
