--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,19 +1,13 @@
 buildscript {
-    ext.kotlin_version = '1.5.0'
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
-        jcenter()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.3'
-
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.android.tools.build:gradle:3.6.2'
-
     }
 }
 
