--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_bloc: ^7.3.0
   google_sign_in: ^5.1.1
   fluttertoast: ^8.0.9
+  url_launcher: ^6.1.2
+  youtube_player_flutter:
 
 
   dio:
@@ -51,6 +53,7 @@ dependencies:
   flutter_local_notifications: 5.0.0
 
   firebase_messaging: ^10.0.5
+  geolocator: ^8.2.1
 
 
 dependency_overrides:
@@ -64,6 +67,8 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -71,6 +76,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
