--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   google_sign_in: ^5.1.1
   fluttertoast: ^8.0.9
   url_launcher: ^6.1.2
-  youtube_player_flutter:
+  youtube_player_flutter: ^8.1.0
 
 
   dio:
